--- a/src/DotNetJit.Cli/DotNetJit.Cli.csproj
+++ b/src/DotNetJit.Cli/DotNetJit.Cli.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\NESDecompiler\NESDecompiler.Core\NESDecompiler.Core.csproj" />
+      <ProjectReference Include="..\..\NESDecompiler\NESDecompiler.Core\NESDecompiler.Core.csproj" />
     </ItemGroup>
 
 </Project>
