Created separate NES library

--- a/src/Dotnet6502.Nes.Cli/Dotnet6502.Nes.Cli.csproj
+++ b/src/Dotnet6502.Nes.Cli/Dotnet6502.Nes.Cli.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\NESDecompiler\NESDecompiler.Core\NESDecompiler.Core.csproj" />
       <ProjectReference Include="..\Dotnet6502.Common\Dotnet6502.Common.csproj" />
+      <ProjectReference Include="..\Dotnet6502.Nes\Dotnet6502.Nes.csproj" />
     </ItemGroup>
 
     <ItemGroup>
