Initial, not working, monogame implementation

--- a/src/Dotnet6502.Nes.Cli/Dotnet6502.Nes.Cli.csproj
+++ b/src/Dotnet6502.Nes.Cli/Dotnet6502.Nes.Cli.csproj
@@ -14,6 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.4" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta7.25380.108" />
     </ItemGroup>
 
