--- a/src/Dotnet6502.ComprehensiveTestRunner/Dotnet6502.ComprehensiveTestRunner.csproj
+++ b/src/Dotnet6502.ComprehensiveTestRunner/Dotnet6502.ComprehensiveTestRunner.csproj
@@ -13,7 +13,7 @@
 
     <ItemGroup>
         <None Include="../../65x02/**" CopyToOutputDirectory="Always" />
-        <None Remove="..\..\65x02\nes6502\**" />
+        <None Remove="..\..\65x02\6502\**" />
         <None Remove="..\..\65x02\rockwell65c02\**" />
         <None Remove="..\..\65x02\synertek65c02\**" />
         <None Remove="..\..\65x02\wdc65c02\**" />
