Just get all submodules for now

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,9 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Checkout NESDecompiler
-        run: git submodule update --init NESDecompiler
+        with:
+          submodules: "recursive"
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v5
